--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"/>
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <title>Adventure Atlas</title>
 </head>
@@ -37,28 +37,27 @@
         <script>window.aichatbotApiKey="35606b8b-8f48-4271-8ad5-6541143f20ca"; window.aichatbotProviderId="f9e9c5e4-6d1a-4b8c-8d3f-3f9e9c5e46d1";</script><script src="https://script.chatlab.com/aichatbot.js" id="35606b8b-8f48-4271-8ad5-6541143f20ca" defer></script>
     </div>
 
+    <h1 id="header-reasons">Why Choose Adventure Atlas</h1>
+
     <div class="why-choose-us">
-        <div class="header-reasons">
-            <h1 id="header-reasons">Why Choose Adventure Atlas</h1>
-        </div>
         <div class="reasons">
             <div class="reason">
-                <h1 id="reason-h1"><i class="fa-solid fa-microchip-ai"></i>Personalized Travel Planning with AI</h1>
+                <h1 id="reason-h1"><i class="fa-solid fa-microchip"></i>Personalized Travel Planning with AI</h1>
                 <p id="reason-p">Adventure Atlas uses advanced AI technology to understand your preferences, budget, and interests. Whether you’re seeking hidden gems or luxury experiences, our AI-powered system tailors your perfect itinerary with unmatched precision.</p>
             </div>
             <div class="reason">
-                <h1 id="reason-h1">Unmatched Expertise in Adventure Travel</h1>
+                <h1 id="reason-h1"><i class="fa-solid fa-suitcase"></i>Unmatched Expertise in Adventure Travel</h1>
                 <p id="reason-p">With a team of seasoned travel experts and adventurers, we bring insider knowledge to every destination. From thrilling hikes to secluded beaches, we curate experiences you won’t find anywhere else.</p>
             </div>
             <div class="reason">
-                <h1 id="reason-h1">Seamless Booking and Support</h1>
+                <h1 id="reason-h1"><i class="fa-solid fa-headset"></i>Seamless Booking and Support</h1>
                 <p id="reason-p">Our intuitive platform makes booking stress-free, and our dedicated support team is available 24/7 to assist you at every step of your journey.Make Adventure Atlas your top travel booking agency. We won't dissapoint. </p>
             </div>
         </div>
     </div>
 
 
-        <div class="useAI">
+        <!-- <div class="useAI">
             <div id="useAI">
                 <h1 id="useAI-h1">Use AI to make your searching for places easier.</h1>
                 <p id="useAI-p">Using AI to search for places to visit revolutionizes the way we plan our trips by providing personalized and efficient recommendations. AI analyzes your preferences, such as favorite activities, budget, travel style, and even weather conditions, to suggest destinations tailored specifically to you. It sifts through vast amounts of data in seconds, uncovering hidden gems and off-the-beaten-path locations that might not appear in traditional guides. Additionally, AI keeps you updated with real-time information, like seasonal attractions or local events, ensuring your trip is perfectly timed. By leveraging AI, you save time, gain unique insights, and enjoy a travel experience curated just for you.</p>
@@ -66,11 +65,10 @@
             <div class="image">
                 <img src="https://easy-peasy.ai/cdn-cgi/image/quality=80,format=auto,width=700/https://fdczvxmwwjwpwbeeqcth.supabase.co/storage/v1/object/public/images/2e4e6543-1e1e-47e9-8e9b-ebd74d55cbd4/9bff4e42-95a9-4b77-b4e0-ed262161ad95.png" id="image"/>
             </div>
-        </div>
+        </div> -->
 
-    <div id="header-info">
-        <h3 id="header-places">According to ChatGPT these are the most visited places of 2024</h3>
-    </div>    
+    <h3 id="header-places">According to ChatGPT these are the most visited places of 2024</h3>   
+    
     <div class="top-visited-places">
         <div class="places">
             <h3 id="places-header">Empire State Building, New York City, USA</h3>
